--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "csv-parse": "^5.5.6",
+    "lucide-react": "^0.441.0",
     "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "recharts": "^2.13.0-alpha.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
